
/* Class = "UIButton"; normalTitle = "Cancelar"; ObjectID = "D9b-67-CDb"; */
"D9b-67-CDb.normalTitle" = "Cancel";
