...
                                                    <rect key="frame" x="32" y="15" width="311" height="70"/>
                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <accessibility key="accessibilityConfiguration">
                                                        <accessibilityTraits key="traits" notEnabled="YES"/>
                                                    </accessibility>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="string" keyPath="title" value="CNPJ Input"/>
                                                    </userDefinedRuntimeAttributes>
                                                </view>
                                            </subviews>
                                            <constraints>
                                                <constraint firstAttribute="bottomMargin" secondItem="dEK-iO-frw" secondAttribute="bottom" constant="4" id="5wY-KA-8DU"/>
                                                <constraint firstAttribute="trailingMargin" secondItem="dEK-iO-frw" secondAttribute="trailing" constant="16" id="DlT-dh-kIQ"/>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="B8M-gB-blH" id="L7N-cV-HIn"/>
                            <outlet property="delegate" destination="B8M-gB-blH" id="Lhx-IE-yJV"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Input" largeTitleDisplayMode="never" id="V4N-9U-cpi"/>
                    <connections>
                        <outlet property="cepInput" destination="k7P-df-OPI" id="zgn-6p-YKj"/>
                        <outlet property="cnpjInput" destination="dEK-iO-frw" id="2ou-S5-6H4"/>
                        <outlet property="cpfInput" destination="rHI-VB-YZ3" id="9ph-c7-Seh"/>
                        <outlet property="currencyInput" destination="wMu-2o-sKV" id="ezq-6V-iOB"/>
                        <outlet property="customInput" destination="xVH-Dm-4iE" id="6Fy-Fx-ype"/>
...
