...
        case cnpjInput:
            state(cnpjInput,
                  text: text,
                  valid: valid,
                  secondState: .warning,
                  secondStateMessage: "CNPJ Warning feedback",
                  successMessage: "CNPJ Success feedback")
        case phoneInput:
            state(phoneInput,
                  text: text,
                  valid: valid,
                  secondState: .warning,
                  secondStateMessage: "Phone Warning feedback",
...
